codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────╮
│ >_ OpenAI Codex (vtest)    │
│                            │
│ 模型： gpt-5   /model 更改 │
│ 目录： /tmp/project        │
│ 权限： YOLO 模式           │
╰────────────────────────────╯
