codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ 有可用更新！ 0.0.0 -> 9.9.9                                                                             │
│ 运行 powershell -ExecutionPolicy Bypass -c '$env:CODEX_NON_INTERACTIVE=1; irm                              │
│ https://chatgpt.com/codex/install.ps1 | iex' 进行更新。                                                    │
│                                                                                                            │
│ 查看完整发行说明：                                                                                         │
│ https://github.com/openai/codex/releases/latest                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
