codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__web_search_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• 已搜索网页：example search query with several generic words t…
